--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* !Gyanesh */
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 :root {
   --mainDark: #242325;
@@ -19,14 +18,16 @@
   background: var(--mainDark) !important;
 }
 
+.me {
+  color: var(--mainGreen);
+}
+
 .green-btn {
   color: var(--mainGreen);
   border: 0.1rem solid var(--mainGreen);
   background: transparent;
 }
-/* !Gyanesh */
 
-/* !Souharda */
 .green-btn:hover {
   background-color: var(--mainGreen);
   color: var(--mainWhite);
@@ -56,9 +57,6 @@
   font-weight: bold;
   padding-top: 10px;
 }
-/* !Souharda */
-
-/* !Chetas */
 
 .new_arriv {
   background-color: green;
@@ -80,9 +78,6 @@ body {
 .colorizing-wrapper {
   position: relative;
 }
-/* !Chetas */
-
-/* !Souvik */
 
 .colorizing-wrapper .colorizing-wrapper__input {
   position: absolute;
@@ -97,4 +92,3 @@ body {
   width: 100%;
   border-radius: 4px;
 }
-/* !Souvik */
